# fastcdc-rs

./: CMakeLists.txt  Cargo.toml
include/: fastcdc-rs.h  stream_chunker.h
src/: lib.rs
